tests/snapshots/compile_file__nested_ctr_wrong_arity.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/nested_ctr_wrong_arity.hvm
---
Errors:
In definition 'fst_fst':
  Incorrect arity for constructor 'Pair' of type 'Pair' in pattern matching rule. Expected 2 fields, found 1
