tests/snapshots/compile_file__num_pattern_with_var.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/num_pattern_with_var.hvm
---
@5 = (* #0)
@6 = #0
@7 = (a a)
@B = (?<(@6 @7) a> a)
@Foo = ({2 @5 {2 @B a}} a)
@main = a
& @Foo ~ (@true (#3 a))
@true = {2 * {2 a a}}

